--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 image: 
-file: .gitpod.Dockerfile 
+  file: .gitpod.Dockerfile 
 vscode: 
-extensions: 
-    ‐ jebbs.plantuml 
-    ‐ contextmapper.context‐mapper‐vscode‐extension 
+  extensions: 
+  - jebbs.plantuml 
+  - contextmapper.context‐mapper‐vscode‐extension 
